--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
 h1 {
     color: blue;
 }
+
+@media (min-width: 992px) {
+    h1 {
+        color: aqua;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 991px)  {
+    h1 {
+        color: red;
+    }
+}
+
+@media (max-width: 767px) {
+    h1 {
+        color: green;
+    }
+}
+
