--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,229 @@
-h1 {
-    color: blue;
+* {
+    box-sizing: border-box;
 }
 
+h1 {
+    color: black;
+    text-align: center;
+}
+
+h2 {
+    float: right;
+    padding: 5px 30px;
+    margin: 0 0 16px 0;
+    border: 0 solid black;
+    border-bottom-width: 1px;
+    border-left-width: 1px;
+}
+
+.color-1 {
+    background-color: lightblue;
+}
+
+.color-2 {
+    background-color: indianred;
+    color: white;
+}
+
+.color-3 {
+    background-color: lightgreen;
+}
+
+p {
+    clear: right;
+    margin: 16px 16px;
+}
+
+div {
+    background-color: gray;
+    border: black solid 1px;
+    height: 275px;
+    overflow: auto;
+}
+
+section {
+    padding: 0.4%;
+}
+
+
 @media (min-width: 992px) {
-    h1 {
-        color: aqua;
+
+    .col-large-1, .col-large-2,
+    .col-large-3, .col-large-4,
+    .col-large-5, .col-large-6,
+    .col-large-7, .col-large-8,
+    .col-large-9, .col-large-10,
+    .col-large-11, .col-large-12 {
+        float: left;
     }
+
+    .col-large-1 {
+        width: 8.33%
+    }
+
+    .col-large-2 {
+        width: 16.66%
+    }
+
+    .col-large-3 {
+        width: 25%
+    }
+
+    .col-large-4 {
+        width: 33.33%
+    }
+
+    .col-large-5 {
+        width: 41.66%
+    }
+
+    .col-large-6 {
+        width: 50%
+    }
+
+    .col-large-7 {
+        width: 58.33%
+    }
+
+    .col-large-8 {
+        width: 66.66%
+    }
+
+    .col-large-9 {
+        width: 75%
+    }
+
+    .col-large-10 {
+        width: 83.33%
+    }
+
+    .col-large-11 {
+        width: 91.66%
+    }
+
+    .col-large-12 {
+        width: 100%
+    }
+
 }
 
 @media (min-width: 768px) and (max-width: 991px)  {
-    h1 {
-        color: red;
+
+    .col-medium-1, .col-medium-2,
+    .col-medium-3, .col-medium-4,
+    .col-medium-5, .col-medium-6,
+    .col-medium-7, .col-medium-8,
+    .col-medium-9, .col-medium-10,
+    .col-medium-11, .col-medium-12 {
+        float: left;
+    }
+
+    .col-medium-1 {
+        width: 8.33%
+    }
+
+    .col-medium-2 {
+        width: 16.66%
+    }
+
+    .col-medium-3 {
+        width: 25%
+    }
+
+    .col-medium-4 {
+        width: 33.33%
+    }
+
+    .col-medium-5 {
+        width: 41.66%
+    }
+
+    .col-medium-6 {
+        width: 50%
+    }
+
+    .col-medium-7 {
+        width: 58.33%
+    }
+
+    .col-medium-8 {
+        width: 66.66%
+    }
+
+    .col-medium-9 {
+        width: 75%
+    }
+
+    .col-medium-10 {
+        width: 83.33%
+    }
+
+    .col-medium-11 {
+        width: 91.66%
+    }
+
+    .col-medium-12 {
+        width: 100%
     }
 }
 
 @media (max-width: 767px) {
-    h1 {
-        color: green;
+
+    .col-small-1, .col-small-2,
+    .col-small-3, .col-small-4,
+    .col-small-5, .col-small-6,
+    .col-small-7, .col-small-8,
+    .col-small-9, .col-small-10,
+    .col-small-11, .col-small-12 {
+        float: left;
+    }
+
+    .col-small-1 {
+        width: 8.33%
+    }
+
+    .col-small-2 {
+        width: 16.66%
+    }
+
+    .col-small-3 {
+        width: 25%
+    }
+
+    .col-small-4 {
+        width: 33.33%
+    }
+
+    .col-small-5 {
+        width: 41.66%
+    }
+
+    .col-small-6 {
+        width: 50%
+    }
+
+    .col-small-7 {
+        width: 58.33%
+    }
+
+    .col-small-8 {
+        width: 66.66%
+    }
+
+    .col-small-9 {
+        width: 75%
+    }
+
+    .col-small-10 {
+        width: 83.33%
+    }
+
+    .col-small-11 {
+        width: 91.66%
+    }
+
+    .col-small-12 {
+        width: 100%
     }
 }
 
