--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,17 @@
 * {
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
 }
 
 h1 {
     color: black;
     text-align: center;
+    font-size: 20px;
 }
 
 h2 {
+    font-size: 16px;
     float: right;
     padding: 5px 30px;
     margin: 0 0 16px 0;
