--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,11 @@
 h1 {
     color: black;
     text-align: center;
-    font-size: 20px;
+    font-size: 175%;
 }
 
 h2 {
-    font-size: 16px;
+    font-size: 125%;
     float: right;
     padding: 5px 30px;
     margin: 0 0 16px 0;
