--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 * {
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
+    color: black;
 }
 
 h1 {
-    color: black;
     text-align: center;
     font-size: 175%;
 }
@@ -35,11 +35,11 @@ h2 {
 
 p {
     clear: right;
-    margin: 16px 16px;
+    margin: 16px;
 }
 
 div {
-    background-color: gray;
+    background-color: #A0A0A0;
     border: black solid 1px;
     height: 275px;
     overflow: auto;
@@ -82,11 +82,11 @@ section {
     }
 
     .col-large-6 {
-        width: 50%
+        width: 49.99%
     }
 
     .col-large-7 {
-        width: 58.33%
+        width: 50%
     }
 
     .col-large-8 {
@@ -230,4 +230,3 @@ section {
         width: 100%
     }
 }
-
